# FluxMirror

./: INSTALL.md  README.md  package.json  setup.ps1  setup.sh
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
