[package]
name = "fluxmirror"
version = "0.1.0"
description = "FluxMirror — wireless Android mirroring"
authors = ["akiro"]
edition = "2021"

[lib]
name = "fluxmirror_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs-next = "2.0.0"
